# ChangeLog for games-strategy/lgeneral
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-strategy/lgeneral/ChangeLog,v 1.43 2012/09/03 10:05:13 phajdan.jr Exp $

  03 Sep 2012; Pawel Hajdan jr <phajdan.jr@gentoo.org> lgeneral-1.2.3.ebuild:
  Fix install, bug #413901 by Volker Hemmann, patch by ssuominen.

  04 Jul 2012; Michael Sterrett <mr_bones_@gentoo.org> -lgeneral-1.2.2.ebuild:
  old

  03 Jul 2012; Jeff Horelick <jdhore@gentoo.org> lgeneral-1.2.3.ebuild:
  marked x86 per bug 424241

  01 Jul 2012; Agostino Sarubbo <ago@gentoo.org> lgeneral-1.2.3.ebuild:
  Stable for amd64, wrt bug #424241

*lgeneral-1.2.3 (21 Apr 2012)

  21 Apr 2012; Michael Sterrett <mr_bones_@gentoo.org> +lgeneral-1.2.3.ebuild:
  version bump

  06 Mar 2012; Michael Sterrett <mr_bones_@gentoo.org>
  -files/lgeneral-1.2-as-needed.patch, -files/lgeneral-1.2-build.patch,
  -files/lgeneral-1.2-gentoo-path.patch, -files/lgeneral-1.2-make-382.patch,
  -files/lgeneral-1.2.1-as-needed.patch, -files/lgeneral-1.2.1-build.patch,
  -files/lgeneral-1.2.1-gentoo-path.patch, -files/lgeneral-1.2.1-make-382.patch,
  -lgeneral-1.2.1.ebuild, -lgeneral-1.2.ebuild:
  old

  08 Oct 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> lgeneral-1.2.2.ebuild:
  x86 stable wrt bug #385893

  06 Oct 2011; Markos Chandras <hwoarang@gentoo.org> lgeneral-1.2.2.ebuild:
  Stable on amd64 wrt bug #385893

*lgeneral-1.2.2 (16 Aug 2011)

  16 Aug 2011; Michael Sterrett <mr_bones_@gentoo.org> +lgeneral-1.2.2.ebuild:
  version bump

*lgeneral-1.2.1 (20 Jul 2011)

  20 Jul 2011; Michael Sterrett <mr_bones_@gentoo.org> +lgeneral-1.2.1.ebuild,
  +files/lgeneral-1.2.1-as-needed.patch, +files/lgeneral-1.2.1-build.patch,
  +files/lgeneral-1.2.1-gentoo-path.patch,
  +files/lgeneral-1.2.1-make-382.patch:
  version bump (bug #375227)

  04 Jan 2011; Markos Chandras <hwoarang@gentoo.org> lgeneral-1.2.ebuild:
  Stable on amd64 wrt bug #350434
